@@ -26,6 +26,7 @@ import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugins.annotations.Execute;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Mojo;
+import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.plugins.annotations.ResolutionScope;
 
 import org.springframework.boot.loader.tools.JavaExecutable;
@@ -38,6 +39,7 @@ import org.springframework.boot.loader.tools.RunProcess;
  * @author Dmytro Nosan
  * @author Stephane Nicoll
  * @author Andy Wilkinson
+ * @since 1.0.0
  */
 @Mojo(name = "run", requiresProject = true, defaultPhase = LifecyclePhase.VALIDATE,
 		requiresDependencyResolution = ResolutionScope.TEST)
@@ -53,7 +55,15 @@ public class RunMojo extends AbstractRunMojo {
 	 */
 	private Boolean hasDevtools;
 
+	/**
+	 * Whether the JVM's launch should be optimized.
+	 * @since 2.2.0
+	 */
+	@Parameter(property = "optimizedLaunch", defaultValue = "true")
+	private boolean optimizedLaunch;
+
 	@Override
+	@Deprecated
 	protected boolean enableForkByDefault() {
 		return super.enableForkByDefault() || hasDevtools();
 	}
@@ -67,23 +77,30 @@ public class RunMojo extends AbstractRunMojo {
 	}
 
 	@Override
-	protected void runWithForkedJvm(File workingDirectory, List<String> args,
-			Map<String, String> environmentVariables) throws MojoExecutionException {
+	protected RunArguments resolveJvmArguments() {
+		RunArguments jvmArguments = super.resolveJvmArguments();
+		if (isFork() && this.optimizedLaunch) {
+			jvmArguments.getArgs().addFirst("-XX:TieredStopAtLevel=1");
+			jvmArguments.getArgs().addFirst("-Xverify:none");
+		}
+		return jvmArguments;
+	}
+
+	@Override
+	protected void runWithForkedJvm(File workingDirectory, List<String> args, Map<String, String> environmentVariables)
+			throws MojoExecutionException {
 		int exitCode = forkJvm(workingDirectory, args, environmentVariables);
 		if (exitCode == 0 || exitCode == EXIT_CODE_SIGINT) {
 			return;
 		}
-		throw new MojoExecutionException(
-				"Application finished with exit code: " + exitCode);
+		throw new MojoExecutionException("Application finished with exit code: " + exitCode);
 	}
 
-	private int forkJvm(File workingDirectory, List<String> args,
-			Map<String, String> environmentVariables) throws MojoExecutionException {
+	private int forkJvm(File workingDirectory, List<String> args, Map<String, String> environmentVariables)
+			throws MojoExecutionException {
 		try {
-			RunProcess runProcess = new RunProcess(workingDirectory,
-					new JavaExecutable().toString());
-			Runtime.getRuntime()
-					.addShutdownHook(new Thread(new RunProcessKiller(runProcess)));
+			RunProcess runProcess = new RunProcess(workingDirectory, new JavaExecutable().toString());
+			Runtime.getRuntime().addShutdownHook(new Thread(new RunProcessKiller(runProcess)));
 			return runProcess.run(true, args, environmentVariables);
 		}
 		catch (Exception ex) {
@@ -92,11 +109,9 @@ public class RunMojo extends AbstractRunMojo {
 	}
 
 	@Override
-	protected void runWithMavenJvm(String startClassName, String... arguments)
-			throws MojoExecutionException {
+	protected void runWithMavenJvm(String startClassName, String... arguments) throws MojoExecutionException {
 		IsolatedThreadGroup threadGroup = new IsolatedThreadGroup(startClassName);
-		Thread launchThread = new Thread(threadGroup,
-				new LaunchRunner(startClassName, arguments), "main");
+		Thread launchThread = new Thread(threadGroup, new LaunchRunner(startClassName, arguments), "main");
 		launchThread.setContextClassLoader(new URLClassLoader(getClassPathUrls()));
 		launchThread.start();
 		join(threadGroup);
